--- a/demos/src/main.scss
+++ b/demos/src/main.scss
@@ -1,106 +1,1 @@
-@import 'n-ui/main';
-
-$o-colors-is-silent: false;
-@import 'o-colors/main';
-
-$o-labels-is-silent: false;
-@import 'o-labels/main';
-
-$o-buttons-is-silent: false;
-@import 'n-myft-ui/myft-common/main';
-$o-buttons-is-silent: true;
-
-@include nUiMyftCommon(false);
-//important! Including n-utils-hide here to overwirte the dominant origami display: in-line property
-.n-util-hide {
-	display: none;
-};
-
-
-$o-grid-gutter-small: oGridGutter(S);
-
-.myft-newsletter {
-	padding-bottom: 20px;
-	display: flex;
-	flex-direction: column;
-	position: relative;
-	width: 100%;
-
-	&::after  {
-		content: '';
-		display: block;
-		margin-top: 21px;
-		border-bottom: 1px solid oColorsGetPaletteColor('black-20');
-	}
-}
-
-.myft-newsletter__header {
-	background-color: oColorsGetPaletteColor('claret');
-	color: white;
-	padding: 5px 12px;
-	display: flex;
-	min-height: 100px;
-	position: relative;
-	box-sizing: border-box;
-
-	// cancel-out o-grid margin for mobile card
-	@include oGridRespondTo($until: S) {
-		left: -$o-grid-gutter-small;
-		width: calc(100% + #{$o-grid-gutter-small * 2});
-	}
-}
-
-.myft-newsletter__heading {
-	@include oTypographyDisplayBold($scale: 2);
-
-	align-self: flex-end;
-	margin: 0;
-
-	// for IE<11
-	max-width: 100%;
-	flex-shrink: 1;
-	padding-top: 20px;
-	// 😢
-	font-size: 30px;
-	line-height: 30px;
-
-	@include oGridRespondTo($from: M, $until: XL) {
-		font-size: 24px;
-		line-height: 28px
-	}
-	@include oGridRespondTo($until: S) {
-		font-size: 40px;
-		line-height: 40px
-	}
-}
-
-.myft-newsletter__top-meta {
-	@include oTypographySansBold($scale: 0);
-	position: absolute;
-	top: 0;
-	right: 16px;
-}
-
-.myft-newsletter__heading {
-	display: inline-block;
-	margin: 10px 10px 10px 0;
-}
-
-.myft-newsletter__description {
-	display: inline-block;
-}
-
-
-.myft-newsletter__description {
-	@include oTypographySans($scale: 1);
-	font-size: 18px;
-	flex-grow: 1;
-	margin: 12px 0 0 0;
-}
-
-.myft-newsletter__meta {
-	@include oTypographySans($scale: -2);
-	text-transform: uppercase;
-	color: oColorsGetPaletteColor('black-60');
-	margin: 16px 0;
-}
+@import '../../main';
