--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,11 +1,11 @@
-<section class="newsletter-signup">
-	<div class="newsletter-signup__header">
-		<h3 class="newsletter-signup__heading">{{name}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h3>
-		{{#if isPremium}}<span aria-hidden="true" class="newsletter-signup__top-meta o-labels o-labels--premium">Premium</span>{{/if}}
+<section data-component="n-newsletter-signup" class="n-newsletter-signup" >
+	<div class="n-newsletter-signup__header">
+		<h3 class="n-newsletter-signup__heading">{{name}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h3>
+		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__top-meta o-labels o-labels--premium">Premium</span>{{/if}}
 	</div>
-	<div data-component="newsletter-description" class="newsletter-signup__description">
-		<p class="newsletter-signup__description myft-body-copy">{{description}}</p>
-		<div aria-hidden="true" class="newsletter-signup__meta">{{frequency}}</div>
+	<div data-component="n-newsletter-signup-description" class="n-newsletter-signup__description">
+		<p class="n-newsletter-signup__description">{{description}}</p>
+		<div aria-hidden="true" class="n-newsletter-signup__meta">{{frequency}}</div>
 	</div>
 
 	{{#if userNeedsToUpgrade}}
