WIP copy client js from myft-page  🐿 v2.5.15

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,4 +1,4 @@
-<section data-component="n-newsletter-signup" class="n-newsletter-signup" >
+<section data-component="n-newsletter-signup" data-newsletter-id={{id}} class="n-newsletter-signup" >
 	<div class="n-newsletter-signup__header">
 		<h3 class="n-newsletter-signup__heading">{{name}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h3>
 		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__top-meta o-labels o-labels--premium">Premium</span>{{/if}}
