--- a/templates/partials/newsletter-form.html
+++ b/templates/partials/newsletter-form.html
@@ -12,7 +12,7 @@
 	>
 	<script data-model="n-newsletter-signup-form" type="text/json">{{{json @this}}}</script>
 	<button
-		class="o-buttons o-buttons--big"
+		class="n-newsletter-signup-button o-buttons o-buttons--big"
 		aria-label="
 			{{~#if userIsSubscribed~}}
 				Unsubscribe from {{name}}
