--- a/templates/partials/newsletter-form.html
+++ b/templates/partials/newsletter-form.html
@@ -1,5 +1,5 @@
 <form
-	data-component="n-newsletter-signup-form"
+	data-component="n-newsletter-signup__form"
 	data-newsletter-id="{{id}}"
 	action="
 		{{~#if userIsSubscribed~}}
@@ -11,7 +11,7 @@
 	method="POST"
 	>
 	<button
-		class="n-newsletter-signup-button o-buttons o-buttons--big"
+		class="n-newsletter-signup__submit"
 		aria-label="
 			{{~#if userIsSubscribed~}}
 				Unsubscribe from {{name}}
