--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,9 +1,13 @@
 <section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
 	<div class="n-newsletter-signup__header">
-		<h3 class="n-newsletter-signup__heading">{{name}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h3>
+		<div class="n-newsletter-signup__heading">
+			<span class="n-newsletter-signup__heading__mail-icon"></span><span class="n-newsletter-signup__heading__title">{{name}} Email<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></span>
+		</div>
 	</div>
-	<div data-component="n-newsletter-signup__description" class="n-newsletter-signup__description">
+	<div data-component="n-newsletter-signup__description">
 		<p class="n-newsletter-signup__description">{{description}}</p>
+		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__meta__premium o-labels o-labels--premium">Premium</span>{{/if}}
+		<span aria-hidden="true" class="n-newsletter-signup__meta__frequency">{{frequency}}</span>
 	</div>
 
 	{{#if userNeedsToUpgrade}}
