--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,6 +1,6 @@
 <section data-component="n-newsletter-signup" data-newsletter-id={{id}} data-newsletter-name={{name}} class="n-newsletter-signup" >
 	<div class="n-newsletter-signup__header">
-		<h3 class="n-newsletter-signup__heading">{{name}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h3>
+		<span class="n-newsletter-signup__heading">{{name}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></span>
 		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__top-meta o-labels o-labels--premium">Premium</span>{{/if}}
 	</div>
 	<div data-component="n-newsletter-signup__description" class="n-newsletter-signup__description">
