fix quote marks on attributes  🐿 v2.5.16

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,4 +1,4 @@
-<section data-component="n-newsletter-signup" data-newsletter-id={{id}} data-newsletter-name={{name}} class="n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
+<section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
 	<div class="n-newsletter-signup__header">
 		<span class="n-newsletter-signup__heading">{{name}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></span>
 		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__top-meta o-labels o-labels--premium">Premium</span>{{/if}}
