--- a/styles/newsletter.scss
+++ b/styles/newsletter.scss
@@ -68,7 +68,6 @@ $o-grid-gutter-small: oGridGutter(S);
 
 .n-newsletter-signup__heading__title {
 	@include oTypographyDisplayBold($scale: 2);
-	// 😢
 	font-size: 30px;
 	line-height: 30px;
 	@include oGridRespondTo($from: M, $until: XL) {
@@ -79,6 +78,7 @@ $o-grid-gutter-small: oGridGutter(S);
 		font-size: 40px;
 		line-height: 40px;
 	}
+	margin: 0;
 }
 
 .n-newsletter-signup__heading__mail-icon__wrapper {
