--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,11 +1,16 @@
 <section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
 	<div class="n-newsletter-signup__header">
-		<span class="n-newsletter-signup__heading">{{name}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></span>
-		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__top-meta o-labels o-labels--premium">Premium</span>{{/if}}
+		<div class="n-newsletter-signup__heading">
+			<div class="n-newsletter-signup__heading__mail-icon__wrapper">
+				<span class="n-newsletter-signup__heading__mail-icon"/>
+			</div>
+			<h2 class="n-newsletter-signup__heading__title">{{name}} Email<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h2>
+		</div>
 	</div>
-	<div data-component="n-newsletter-signup__description" class="n-newsletter-signup__description">
+	<div data-component="n-newsletter-signup__description">
 		<p class="n-newsletter-signup__description">{{description}}</p>
-		<div aria-hidden="true" class="n-newsletter-signup__meta">{{frequency}}</div>
+		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__meta__premium o-labels o-labels--premium">Premium</span>{{/if}}
+		<span aria-hidden="true" class="n-newsletter-signup__meta__frequency">{{frequency}}</span>
 	</div>
 
 	{{#if userNeedsToUpgrade}}
