--- a/styles/newsletter.scss
+++ b/styles/newsletter.scss
@@ -96,12 +96,12 @@ $o-grid-gutter-small: oGridGutter(S);
 }
 
 .n-newsletter-signup__heading__mail-icon {
-	@include oIconsGetIcon('mail', getColor('white'), 40, $iconset-version: 1);
+	@include oIconsGetIcon('mail', getColor('white'), 40);
 	@include oGridRespondTo($from: M, $until: XL) {
-		@include oIconsGetIcon('mail', getColor('white'), 35, $iconset-version: 1);
+		@include oIconsGetIcon('mail', getColor('white'), 35);
 	}
 	@include oGridRespondTo($until: S) {
-		@include oIconsGetIcon('mail', getColor('white'), 50, $iconset-version: 1);
+		@include oIconsGetIcon('mail', getColor('white'), 50);
 	}
 }
 
