--- a/styles/newsletter.scss
+++ b/styles/newsletter.scss
@@ -32,6 +32,15 @@ $o-grid-gutter-small: oGridGutter(S);
 	};
 }
 
+.n-newsletter-signup__subscribed {
+	@include oButtons($theme: primary);
+	@include oButtonsSize(big);
+	margin: 14px 0 0;
+	.n-util-hide {
+		display: none;
+	};
+}
+
 .n-newsletter-signup__upgrade {
 	@include oButtons();
 	@include oButtonsSize(big);
