reflect list name in newsletter heading

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -4,7 +4,7 @@
 			<div class="n-newsletter-signup__heading__mail-icon__wrapper">
 				<span class="n-newsletter-signup__heading__mail-icon"/>
 			</div>
-			<h2 class="n-newsletter-signup__heading__title">{{name}} Email<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h2>
+			<h2 class="n-newsletter-signup__heading__title">{{name}} <span class="n-util-visually-hidden">Email{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h2>
 		</div>
 	</div>
 	<div data-component="n-newsletter-signup__description">
