--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,4 +1,4 @@
-<section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
+<section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
 	<div class="n-newsletter-signup__header">
 		<div class="n-newsletter-signup__heading">
 			<div class="n-newsletter-signup__heading__mail-icon__wrapper">
