Extend options and allow for theme overrides  🐿 v2.5.16

--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,4 @@
 @import "n-ui-foundations/main";
 @import './styles/newsletter';
+@import './styles/newsletter-dark';
 @import './styles/feedback-messaging';
