--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,16 +1,25 @@
-<section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
+<section 
+	data-component="n-newsletter-signup" 
+	data-newsletter-id="{{id}}" 
+	data-newsletter-name="{{name}}" 
+	class="n-newsletter-signup n-newsletter-signup" 
+	{{#if theme}}data-newsletter-theme="{{theme}}"{{/if}}
+	data-newsletter-user-subscribed="{{userIsSubscribed}}"
+	{{#if isPremium}}data-newsletter-is-premium{{/if}}>
 	<div class="n-newsletter-signup__header">
 		<div class="n-newsletter-signup__heading">
 			<div class="n-newsletter-signup__heading__mail-icon__wrapper">
 				<span class="n-newsletter-signup__heading__mail-icon"/>
 			</div>
-			<h2 class="n-newsletter-signup__heading__title">{{name}} Email<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h2>
+			<h2 class="n-newsletter-signup__heading__title">{{name}} {{#unless hideEmailLabel}}Email{{/unless}}<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h2>
 		</div>
 	</div>
-	<div data-component="n-newsletter-signup__description">
+	<div class="n-newsletter-signup__content" data-component="n-newsletter-signup__description">
 		<p class="n-newsletter-signup__description">{{description}}</p>
-		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__meta__premium o-labels o-labels--premium">Premium</span>{{/if}}
-		<span aria-hidden="true" class="n-newsletter-signup__meta__frequency">{{frequency}}</span>
+		<div class="n-newsletter-signup__meta">
+			 {{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__meta__premium o-labels o-labels--premium">Premium</span>{{/if}}
+			<span aria-hidden="true" class="n-newsletter-signup__meta__frequency">{{frequency}}</span>
+		</div>
 	</div>
 
 	{{#if userNeedsToUpgrade}}
