--- a/templates/partials/newsletter-form.html
+++ b/templates/partials/newsletter-form.html
@@ -35,15 +35,18 @@
 		"
 		type="submit"
 		aria-describedby="feedback-message__newsletter-{{id}}"
+		data-newsletter-toggle="{{#if userIsSubscribed }}{{subscribeText}}{{else}}{{unsubscribeText}}{{/if}}"
 		{{#if updatingPreference}}disabled="disabled" aria-disabled="true"{{/if}}
 		>
-
 			{{#if updatingPreference}}
-				Updating<span class="n-util-visually-hidden">&nbsp;{{name}} subscription</span>…
+				<span class="n-newsletter-signup__buttontext">Updating</span>
+				<span class="n-util-visually-hidden">&nbsp;{{name}} subscription</span>…
 			{{else if userIsSubscribed}}
-				Unsubscribe<span class="n-util-visually-hidden">&nbsp;from {{name}}</span>
+				<span class="n-newsletter-signup__buttontext">{{unsubscribeText}}</span>
+				<span class="n-util-visually-hidden">&nbsp;to {{name}}</span>
 			{{else}}
-				One-Click Sign Up<span class="n-util-visually-hidden">&nbsp;to {{name}}</span>
+				<span class="n-newsletter-signup__buttontext">{{subscribeText}}</span>
+				<span class="n-util-visually-hidden">&nbsp;to {{name}}</span>
 			{{/if}}
 		</button>
 </form>
