--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -2,8 +2,7 @@
 	data-component="n-newsletter-signup" 
 	data-newsletter-id="{{id}}" 
 	data-newsletter-name="{{name}}" 
-	class="n-newsletter-signup n-newsletter-signup" 
-	{{#if theme}}data-newsletter-theme="{{theme}}"{{/if}}
+	class="n-newsletter-signup{{#if theme}} n-newsletter-signup--{{theme}}{{/if}}" 
 	data-newsletter-user-subscribed="{{userIsSubscribed}}"
 	{{#if isPremium}}data-newsletter-is-premium{{/if}}>
 	<div class="n-newsletter-signup__header">
