--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,10 +1,7 @@
 <section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
 	<div class="n-newsletter-signup__header">
 		<div class="n-newsletter-signup__heading">
-			<div class="n-newsletter-signup__heading__mail-icon__wrapper">
-				<span class="n-newsletter-signup__heading__mail-icon"/>
-			</div>
-			<h2 class="n-newsletter-signup__heading__title">{{name}} Email<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h2>
+			<h2 class="n-newsletter-signup__heading__title">Sign up to the {{name}} email<span class="n-util-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h2>
 		</div>
 	</div>
 	<div data-component="n-newsletter-signup__description">
