--- a/styles/newsletter.scss
+++ b/styles/newsletter.scss
@@ -69,7 +69,7 @@ $o-grid-gutter-small: oGridGutter(S);
 	display: inline-block;
 	font-size: 18px;
 	flex-grow: 1;
-	margin: 16px 16px 4px 16px;
+	margin: 16px 16px 4px;
 }
 
 .n-newsletter-signup__meta__premium {
