--- a/templates/partials/newsletter-form.html
+++ b/templates/partials/newsletter-form.html
@@ -39,11 +39,11 @@
 		>
 
 			{{#if updatingPreference}}
-				Updating<span class="n-util-visually-hidden">&nbsp;{{name}} subscription</span>…
+				Updating<span class="o-normalise-visually-hidden">&nbsp;{{name}} subscription</span>…
 			{{else if userIsSubscribed}}
-				Unsubscribe<span class="n-util-visually-hidden">&nbsp;from {{name}}</span>
+				Unsubscribe<span class="o-normalise-visually-hidden">&nbsp;from {{name}}</span>
 			{{else}}
-				One-Click Sign Up<span class="n-util-visually-hidden">&nbsp;to {{name}}</span>
+				One-Click Sign Up<span class="o-normalise-visually-hidden">&nbsp;to {{name}}</span>
 			{{/if}}
 		</button>
 </form>
