--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,4 @@
 @import "n-ui-foundations/main";
 @import './styles/newsletter';
 @import './styles/feedback-messaging';
+@import './styles/simple';
