--- a/styles/newsletter.scss
+++ b/styles/newsletter.scss
@@ -109,7 +109,7 @@ $o-grid-gutter-small: oGridGutter(S);
 		vertical-align: middle;
 		margin-left: -10px;
 		background-position: center;
-		@include _oButtonsGetIconForThemeAndState(tick, primary, normal)
+		@include _oButtonsGetIconForThemeAndState(tick, primary, normal);
 	}
 }
 
