--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -1,7 +1,7 @@
 <section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup n-newsletter-signup" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
 	<div class="n-newsletter-signup__header">
 		<h2 class="n-newsletter-signup__heading">{{name}}<span class="o-normalise-visually-hidden">{{#if isPremium}}, premium{{/if}}{{#if frequency}}, {{frequency}}{{/if}}</span></h2>
-		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__top-meta o-labels o-labels--premium">Premium</span>{{/if}}
+		{{#if isPremium}}<span aria-hidden="true" class="n-newsletter-signup__top-meta o-labels o-labels--content-premium">Premium</span>{{/if}}
 	</div>
 	<div data-component="n-newsletter-signup__description" class="n-newsletter-signup__description">
 		<p class="n-newsletter-signup__body">{{description}}</p>
