Remove excess styles from `n-newsletter-signup__submit` 🐿 v2.12.5

--- a/styles/simple.scss
+++ b/styles/simple.scss
@@ -11,8 +11,7 @@
 	}
 	.n-newsletter-signup__submit {
 		@include oButtonsContent($opts: (
-			'type': 'primary',
-			'size': 'big'
+			'type': 'primary'
 		), $include-base-styles: false);
 		margin-left: 0;
 	}
