--- a/templates/simple.html
+++ b/templates/simple.html
@@ -1,5 +1,5 @@
 <section data-component="n-newsletter-signup" data-newsletter-id="{{id}}" data-newsletter-name="{{name}}" class="n-newsletter-signup n-newsletter-signup--simple" {{#if isPremium}}data-newsletter-is-premium{{/if}}>
-	<span class="n-newsletter-signup__description">Sign up to the {{frequency}} {{name}} email</span>
+	<span class="n-newsletter-signup__description">Sign up to the {{name}} email, {{frequency}} </span>
 
 	{{#if userNeedsToUpgrade}}
 		<a href="/products?location=/newsletters" class="n-newsletter-signup__upgrade" data-trackable="newsletters-upgrade">Upgrade<span class="o-normalise-visually-hidden">&nbsp; your subscription to receive {{name}}</span></a>
