--- a/templates/partials/newsletter-form.html
+++ b/templates/partials/newsletter-form.html
@@ -11,7 +11,7 @@
 		"
 	method="POST"
 	>
-	{{> n-myft-ui/components/csrf-token/input}}
+	{{> @financial-times/n-myft-ui/components/csrf-token/input}}
 	<button
 		class="n-newsletter-signup__submit"
 		aria-label="
