CPORM20 - Migration from Bower to NPM

--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,5 @@
-@import 'o-labels/main';
-@import 'o-buttons/main';
+@import '@financial-times/o-labels/main';
+@import '@financial-times/o-buttons/main';
 
 @import "n-ui-foundations/main";
 @import './styles/newsletter';
