Change accessible name on newsletter-form to include the whole visual label

--- a/templates/partials/newsletter-form.html
+++ b/templates/partials/newsletter-form.html
@@ -18,7 +18,7 @@
 			{{~#if userIsSubscribed~}}
 				Unsubscribe from {{name}}
 			{{~else~}}
-				Subscribe to {{name}}
+				One-Click Sign Up subscribe to {{name}}
 			{{~/if~}}
 		"
 		title="
